# oh-my-pi

./: Cargo.toml  README.md  STAGES.md  biome.json  tsconfig.base.json
crates/pi-natives/: Cargo.toml
crates/pi-natives/src/: ast.rs  clipboard.rs  fff.rs  fs_cache.rs  glob.rs  grep.rs  html.rs  image.rs  indent.rs  keys.rs  lib.rs  projfs_overlay.rs  pty.rs  search_db.rs  shell.rs  task.rs  text.rs
crates/pi-natives/src/chunk/: ast_go.rs  ast_tlaplus.rs  common.rs  edit.rs  indent.rs  mod.rs  render.rs  resolve.rs  state.rs  types.rs
crates/pi-natives/src/shell/: windows.rs
scripts/: release.ts
