[workspace]
members = ["crates/*"]
exclude = ["crates/brush-core-vendored", "crates/brush-builtins-vendored"]
resolver = "3"

[workspace.package]
version = "13.9.6"
edition = "2024"
license = "MIT"
authors = ["Can Boluk"]
repository = "https://github.com/can1357/oh-my-pi"

[patch.crates-io]
brush-core = { path = "crates/brush-core-vendored" }
brush-builtins = { path = "crates/brush-builtins-vendored" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
codegen-units = 256
incremental = true

[workspace.lints.clippy]
# Base Lint Levels
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Meta: Lint Attributes
allow_attributes_without_reason = "warn"

# Safety & Unsafe Code
undocumented_unsafe_blocks = "warn"

# Numeric Casts & Conversions
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

# Functions & Closures
inline_always = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
redundant_closure_for_method_calls = "allow"
return_self_not_must_use = "allow"

# Structs & Types
missing_fields_in_debug = "allow"
struct_excessive_bools = "allow"

# Pattern Matching
match_same_arms = "allow"
match_wildcard_for_single_variants = "allow"
option_if_let_else = "allow"

# Imports & Module Organization
enum_glob_use = "allow"
items_after_statements = "allow"
wildcard_imports = "allow"

# Variables & Type Inference
similar_names = "allow"

# Literals & Formatting
unreadable_literal = "allow"

# Code Style
default_trait_access = "allow"
significant_drop_tightening = "allow"

# Documentation
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Complexity
too_many_lines = "allow"
