[package]
name = "pi-natives"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
mimalloc = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
napi = { version = "3", features = ["napi10", "tokio_rt", "tokio_time"] }
napi-derive = "3"
bytes = "1.7"
bytes-utils = "0.1"
brush-core = { version = "0.4.0", path = "../brush-core-vendored" }
brush-builtins = { version = "0.1.0", path = "../brush-builtins-vendored" }
parking_lot = "0.12.5"
dashmap = "6.1"
clap = { version = "4", features = ["derive"] }
os_pipe = "1"
portable-pty = "0.9"
grep-regex = "0.1"
fff-grep = "0.4"
fff = { package = "fff-search", version = "0.4.2", default-features = false, features = [
   "zlob",
] }
grep-matcher = "0.1"
globset = "0.4"
ignore = "0.4"
rayon = "1.10"
ast-grep-core = { version = "0.39", default-features = false, features = [
   "tree-sitter",
] }
tree-sitter = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-clojure = "0.1"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-css = "0.25"
tree-sitter-diff = "0.1"
tree-sitter-elixir = "0.3"
tree-sitter-go = "0.25"
tree-sitter-glimmer = "0.0.1"
tree-sitter-haskell = "0.23"
tree-sitter-hcl = "1.1"
tree-sitter-html = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.23"
tree-sitter-julia = "0.23"
tree-sitter-kotlin = { version = "0.4", package = "tree-sitter-kotlin-sg" }
tree-sitter-lua = "0.2"
tree-sitter-make = "1.1"
tree-sitter-md = "0.5"
tree-sitter-nix = "0.3"
tree-sitter-objc = "3.0"
tree-sitter-odin = "1.3"
tree-sitter-php = "0.24"
tree-sitter-python = "0.25"
tree-sitter-regex = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-scala = "0.24"
tree-sitter-solidity = "1.2"
tree-sitter-starlark = "1.3"
tree-sitter-swift = "0.7"
tree-sitter-toml-ng = "0.7"
tree-sitter-tlaplus = "1.5"
tree-sitter-typescript = "0.23"
tree-sitter-verilog = "1.0"
tree-sitter-xml = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-zig = "1.1"
inferno = { version = "0.12", default-features = false }
image = { version = "0.25", default-features = false, features = [
   "png",
   "jpeg",
   "gif",
   "webp",
] }
arboard = { version = "3.5.0", features = ["wayland-data-control"] }
icy_sixel = "0.5"
unicode-segmentation = "1.11"
unicode-width = "0.2"
syntect = { version = "5.3", default-features = false, features = [
   "default-syntaxes",
   "default-themes",
   "regex-fancy",
] }
html-to-markdown-rs = { version = "2.24", default-features = false }
phf = { version = "0.13", features = ["macros"] }
smallvec = { version = "1.15.1", features = [
   "serde",
   "write",
   "union",
   "specialization",
   "const_new",
] }
memmap2 = "0.9"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
regex = "1"
similar = "3.0.0"
path-clean = "1"
pathdiff = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

windows-sys = { version = "0.61", features = [
   "Win32_Foundation",
   "Win32_Storage_ProjectedFileSystem",
   "Win32_System_Com",
   "Win32_System_LibraryLoader",
] }
[build-dependencies]
napi-build = "2"
cc = "1"
